# video_upload_workflow

./: .dockerignore  .gitignore  Dockerfile  README.md  build.sh  push_to_ghcr.sh  pyproject.toml  run.sh  run_ghcr_image.sh
src/: video_upload_workflow.py
src/web/: app.py
src/web/static/css/: style.css
src/web/static/js/: process.js
src/web/templates/: base.html  confirm.html  download.html  edit_description.html  index.html  process.html  select_title.html
