[project]
name = "video-upload-workflow"
version = "0.1.0"
description = "Edit, transcribe, describe and upload videos."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "color_edit",
    "yt_chapter_maker",
    "yt_upload",
    "openai-whisper",
    "flask",
]

[dependency-groups]
dev = [
    "ruff>=0.9.6",
]

[tool.uv]
package = true

[tool.uv.sources]
color_edit = { git = "https://github.com/vivekhaldar/color_edit" }
yt_chapter_maker = { git = "https://github.com/vivekhaldar/yt_chapter_maker" }
yt_upload = { git = "https://github.com/vivekhaldar/yt_upload" }

[project.scripts]
video_upload_workflow = "video_upload_workflow:main"